@@ -6,6 +6,9 @@
    - markus@cvs.openbsd.org 2001/04/15 08:43:47
      [dh.c sftp-glob.c sftp-glob.h sftp-int.c sshconnect2.c sshd.c]
      some unused variable and typos; from tomh@po.crl.go.jp
+   - markus@cvs.openbsd.org 2001/04/15 16:58:03
+     [authfile.c ssh-keygen.c sshd.c]
+     don't use errno for key_{load,save}_private; discussion w/ solar@openwall
  - (djm) Convert mandoc manpages to man automatically. Patch from Mark D.
    Roth <roth+openssh@feep.net>
 
